--- a/components/.eslintrc.json
+++ b/components/.eslintrc.json
@@ -9,7 +9,8 @@
         "plugin:@typescript-eslint/recommended",
         "airbnb",
         "airbnb-typescript",
-        "airbnb/hooks"
+        "airbnb/hooks",
+        "plugin:prettier/recommended"
     ],
     "overrides": [
     ],
@@ -17,12 +18,36 @@
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module",
-        "project": "./tsconfig.json"
+        "project": ["./tsconfig.json", "./tsconfig.node.json"]
     },
     "plugins": [
         "react",
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "prettier"
     ],
     "rules": {
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn",
+        "comma-dangle": ["error", "only-multiline"],
+        "react/prop-types": "off",
+        "react/display-name": "off",
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "prettier/prettier": ["error", { "endOfLine": "auto" }],
+        "@typescript-eslint/interface-name-prefix": "off",
+        "@typescript-eslint/ban-ts-comment": "error",
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "@typescript-eslint/explicit-module-boundary-types": "off",
+        "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/no-explicit-any": "error",
+        "@typescript-eslint/no-var-reqiures": "off",
+        "react/jsx-uses-react": "off",
+        "react/react-in-jsx-scope": "off",
+        "react/function-component-definition": [
+            2,
+            {
+                "namedComponents": "arrow-function",
+                "unnamedComponents": "arrow-function"
+            }
+        ]
     }
 }
