--- a/components/.eslintrc.json
+++ b/components/.eslintrc.json
@@ -42,12 +42,15 @@
         "@typescript-eslint/no-var-reqiures": "off",
         "react/jsx-uses-react": "off",
         "react/react-in-jsx-scope": "off",
+        "eslint-disable-next-line prettier/prettier": "off",
         "react/function-component-definition": [
             2,
             {
                 "namedComponents": "arrow-function",
                 "unnamedComponents": "arrow-function"
             }
-        ]
+        ],
+        "no-param-reassign": ["error", { "props": false }],
+        "no-underscore-dangle": 0
     }
 }
