--- a/components/.eslintrc.json
+++ b/components/.eslintrc.json
@@ -51,6 +51,7 @@
             }
         ],
         "no-param-reassign": ["error", { "props": false }],
-        "no-underscore-dangle": 0
+        "no-underscore-dangle": 0,
+        "max-len": ["error", { "code": 80, "ignoreUrls": true, "ignoreStrings": true, "ignoreComments": true }]
     }
 }
