--- a/components/.prettierrc.json
+++ b/components/.prettierrc.json
@@ -4,6 +4,7 @@
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "es5",
-  "printWidth": 100,
-  "arrowParens": "always"
+  "printWidth": 80,
+  "arrowParens": "always",
+  "jsxSingleQuote": false
 }
