--- a/components/package.json
+++ b/components/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "lint": "eslint . --ext .tsx --ext .ts",
+    "lint-fix": "eslint . --ext .tsx --ext .ts --fix",
+    "coverage": "npx vitest run --coverage.enabled --coverage.provider=c8 --coverage.all"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -23,7 +26,8 @@
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-react": "^3.1.0",
-    "eslint": "^8.2.0",
+    "@vitest/coverage-c8": "^0.29.3",
+    "eslint": "^8.36.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.7.0",
@@ -36,6 +40,7 @@
     "prettier": "^2.8.4",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
+    "vite-plugin-eslint": "^1.8.1",
     "vitest": "^0.29.2"
   }
 }
