--- a/components/package.json
+++ b/components/package.json
@@ -13,6 +13,7 @@
     "coverage": "npx vitest run --coverage.enabled --coverage.provider=c8 --coverage.all"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.8",
